--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .completed {
-  text-decoration: line-through solid rgb(0 , 0 , 0);
+  text-decoration: line-through solid black;
 }
 
-.riscado {
+.completed {
   text-decoration: line-through;
 }
