--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 .completed {
   text-decoration: line-through solid black;
 }
+
+.selecionado {
+  background-color: rgb(128, 128, 128);
+}
+
+.item-tarefa {
+  background-color: white;
+}
