--- a/style.css
+++ b/style.css
@@ -48,15 +48,15 @@ input {
   border-radius: 5px;
   border-color: steelblue;
   height: 20px;
-  text-align: center;  
+  text-align: center;
 }
 
-input[type=text]:focus {
+input:focus {
   outline: none;
 }
 
 header {
-  background-color: rgba(255, 255, 255, 0.801);
+  background-color: rgba(255 , 255 , 255 , 0.801);
   border-radius: 20px;
   margin: 20px;
   padding-bottom: 35px;
@@ -67,7 +67,7 @@ header {
   background-color: yellow;
 }
 
-#mover-cima, #mover-baixo {
+#mover-cima , #mover-baixo {
   background-color: blue;
   color: white;
 }
