--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   background-image: url('/cortica3.jpg');
   text-align: center;
+  font-family: 'Arima Madurai', cursive;
 }
 
 button {
@@ -10,6 +11,8 @@ button {
   margin: 3px;
   padding-left: 5px;
   padding-right: 5px;
+  font-family: 'Arima Madurai', cursive;
+  font-weight: 600;
 }
 
 .completed {
